--- a/CampusHub/Components/_Imports.razor
+++ b/CampusHub/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using CampusHub.Presentation.Components
 @using CampusHub.Application.DTO
 @using CampusHub.Application.Services
+@using CurrieTechnologies.Razor.SweetAlert2
